--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ install:
   - python3 -m pip install -U setuptools pip wheel
   - python3 -m pip install -e .[dev]
 script:
-  - pytest tests.py
+  - python3 -m pytest tests.py
 after_success:
   - |
     if [[ $TRAVIS_TAG ]]; then
