travis: fuck windows and mac

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,8 @@ dist: bionic
 language: python
 jobs:
   include:
-    - services: docker
-      language: python
-    - os: osx
-      language: python
-    - os: windows
+    - os: linux
+      services: docker
       language: python
 env:
   global:
